welcome page & piano

--- a/src/m12/m12.main.less
+++ b/src/m12/m12.main.less
@@ -1,4 +1,7 @@
+@import "utils/utils";
 @import "widgets/guitar";
 @import "widgets/ui-toolkit";
 @import "widgets/ex-find-cell";
 @import "widgets/gtab";
+@import "widgets/piano";
+@import "widgets/piano-widgets";
