generalize add scale notes ex

--- a/src/m12/utils/utils.less
+++ b/src/m12/utils/utils.less
@@ -7,3 +7,13 @@
 .m12-max-width {
   overflow-x: scroll;
 }
+
+.m12-inline-block {
+  display: inline-block;
+}
+
+.m12-text-spaced {
+  @text-spacing: 3px;
+  margin-left: @text-spacing;
+  margin-right: @text-spacing;
+}
