G2 exercise and height picker

--- a/src/m12/widgets/guitar.less
+++ b/src/m12/widgets/guitar.less
@@ -62,6 +62,10 @@
   background-color: fade(@color, 10%);
 }
 
+.gtr-cell-blue {
+  .gtr-cell-color(blue);
+}
+
 .gtr-cell-blue-on-hover {
   &:hover {
     .gtr-cell-color(blue);
